--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scroll": "^1.8.0",
     "react-stickynode": "^3.0.3",
     "react-waypoint": "^9.0.2",
+    "react-whatsapp-widget": "^1.3.0",
     "swiper": "^6.3.1",
     "theme-ui": "^0.3.1",
     "typeface-dm-sans": "^1.1.3"
